--- a/tables.html
+++ b/tables.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container ">
+    <div class="container lagos">
         <div >
             <table class="table table-hover table-bordered ">
                 <thead>
@@ -75,7 +75,311 @@
             </table>
         </div>
     </div>
+    <div class="container Osun">
+        <div >
+            <table class="table table-hover table-bordered ">
+                <thead>
+                    <tr>
+                        <!-- <th scope="col">#</th> -->
+                        <th colspan="3">Osun State</th>
+                        <!-- <th scope="col">Last</th> -->
 
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Ikeja </th>
+                        <td>Canterbury Health Consult, 20B Lanre Awolokun
+                            St, Gbagada, Lagos.</td>
+                        <td>+234 90367899</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Ogba</th>
+                        <td>123, yahaya Abatan street, along Excellent Hotel road,
+                            Ogba Lagos State.</td>
+                        <td>+234 80567469</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Maryland</th>
+                        <td>Alagbaa round about, beside Okeyson motors
+                            Iyana-Ipaja- Agege motor garage, Iyana Ipaja.</td>
+                        <td>+234 90325410</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Lekki Ajah</th>
+                        <td>Jakande Estate, Beside Elegushi Market, Leki, Phase 1,
+                            Lekki Penninsula II, Lekki
+
+                        </td>
+                        <td>+234 90777541</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Lagos Island</th>
+                        <td>149, Bamgbose street, Lagos Island, Lagos.</td>
+                        <td>+234 80643244</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Omole</th>
+                        <td>Plot 74b, Ademola Olowokeere Layout, along berger bus stop, Omole, Lagos State.</td>
+                        <td>+234 90666447</td>
+                    </tr>
+                    <tr class="tablelast">
+                        <th scope="row">Iyana Ipaja</th>
+                        <td>Alagbaa round about, beside Okeyson motors Iyana-Ipaja
+                            - Agege motor garage, Iyana Ipaja.</td>
+                        <td>+234 90666447</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="container Ondo">
+        <div >
+            <table class="table table-hover table-bordered ">
+                <thead>
+                    <tr>
+                        <!-- <th scope="col">#</th> -->
+                        <th colspan="3">Ondo State</th>
+                        <!-- <th scope="col">Last</th> -->
+
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Ikeja </th>
+                        <td>Canterbury Health Consult, 20B Lanre Awolokun
+                            St, Gbagada, Lagos.</td>
+                        <td>+234 90367899</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Ogba</th>
+                        <td>123, yahaya Abatan street, along Excellent Hotel road,
+                            Ogba Lagos State.</td>
+                        <td>+234 80567469</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Maryland</th>
+                        <td>Alagbaa round about, beside Okeyson motors
+                            Iyana-Ipaja- Agege motor garage, Iyana Ipaja.</td>
+                        <td>+234 90325410</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Lekki Ajah</th>
+                        <td>Jakande Estate, Beside Elegushi Market, Leki, Phase 1,
+                            Lekki Penninsula II, Lekki
+
+                        </td>
+                        <td>+234 90777541</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Lagos Island</th>
+                        <td>149, Bamgbose street, Lagos Island, Lagos.</td>
+                        <td>+234 80643244</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Omole</th>
+                        <td>Plot 74b, Ademola Olowokeere Layout, along berger bus stop, Omole, Lagos State.</td>
+                        <td>+234 90666447</td>
+                    </tr>
+                    <tr class="tablelast">
+                        <th scope="row">Iyana Ipaja</th>
+                        <td>Alagbaa round about, beside Okeyson motors Iyana-Ipaja
+                            - Agege motor garage, Iyana Ipaja.</td>
+                        <td>+234 90666447</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="container Ogun">
+        <div >
+            <table class="table table-hover table-bordered ">
+                <thead>
+                    <tr>
+                        <!-- <th scope="col">#</th> -->
+                        <th colspan="3">Ogun State</th>
+                        <!-- <th scope="col">Last</th> -->
+
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Abeokuta </th>
+                        <td>27 Babs Fafunwa Street, oke ilewo, Abeokuta, Ogun State.</td>
+                        <td>+234 90367899</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Ado Odo</th>
+                        <td>45, Oba Sijuade Road, Beside Sweet Sensations Building, 
+                            Ado Odo, Ota, Ogun State.</td>
+                        <td>+234 80567469</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Agbara</th>
+                        <td>65, industrial Layout  avenue, agbara Road, Ogun State.</td>
+                        <td>+234 90325410</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Ijebu ode</th>
+                        <td>173 Akin odunsi Estate, Along side Sweet Sensation building, Ijebu ode.
+                        </td>
+                        <td>+234 90777541</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Ilaro</th>
+                        <td>149, Bamgbose street, Lagos Island, Lagos.</td>
+                        <td>+234 90666447</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Osiele</th>
+                        <td>Alagbaa round about, beside Okeyson motors osiele
+                            - Along camp Funnab Road, Abeokuta</td>
+                        <td>+234 80643244</td>
+                    </tr>
+                    <tr class="tablelast">
+                        <th scope="row">sagamu</th>
+                        <td>234, Kessington Avenue, along sagamu Benin ore Road,
+                            Ogun State. </td>
+                        <td>+234 90666447</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="container Ekiti">
+        <div >
+            <table class="table table-hover table-bordered ">
+                <thead>
+                    <tr>
+                        <!-- <th scope="col">#</th> -->
+                        <th colspan="3">Ekiti State</th>
+                        <!-- <th scope="col">Last</th> -->
+
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Ikeja </th>
+                        <td>Canterbury Health Consult, 20B Lanre Awolokun
+                            St, Gbagada, Lagos.</td>
+                        <td>+234 90367899</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Ogba</th>
+                        <td>123, yahaya Abatan street, along Excellent Hotel road,
+                            Ogba Lagos State.</td>
+                        <td>+234 80567469</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Maryland</th>
+                        <td>Alagbaa round about, beside Okeyson motors
+                            Iyana-Ipaja- Agege motor garage, Iyana Ipaja.</td>
+                        <td>+234 90325410</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Lekki Ajah</th>
+                        <td>Jakande Estate, Beside Elegushi Market, Leki, Phase 1,
+                            Lekki Penninsula II, Lekki
+
+                        </td>
+                        <td>+234 90777541</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Lagos Island</th>
+                        <td>149, Bamgbose street, Lagos Island, Lagos.</td>
+                        <td>+234 80643244</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Omole</th>
+                        <td>Plot 74b, Ademola Olowokeere Layout, along berger bus stop, Omole, Lagos State.</td>
+                        <td>+234 90666447</td>
+                    </tr>
+                    <tr class="tablelast">
+                        <th scope="row">Iyana Ipaja</th>
+                        <td>Alagbaa round about, beside Okeyson motors Iyana-Ipaja
+                            - Agege motor garage, Iyana Ipaja.</td>
+                        <td>+234 90666447</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="container Oyo">
+        <div >
+            <table class="table table-hover table-bordered ">
+                <thead>
+                    <tr>
+                        <!-- <th scope="col">#</th> -->
+                        <th colspan="3">Oyo State</th>
+                        <!-- <th scope="col">Last</th> -->
+
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Ikeja </th>
+                        <td>Canterbury Health Consult, 20B Lanre Awolokun
+                            St, Gbagada, Lagos.</td>
+                        <td>+234 90367899</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Ogba</th>
+                        <td>123, yahaya Abatan street, along Excellent Hotel road,
+                            Ogba Lagos State.</td>
+                        <td>+234 80567469</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">Maryland</th>
+                        <td>Alagbaa round about, beside Okeyson motors
+                            Iyana-Ipaja- Agege motor garage, Iyana Ipaja.</td>
+                        <td>+234 90325410</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Lekki Ajah</th>
+                        <td>Jakande Estate, Beside Elegushi Market, Leki, Phase 1,
+                            Lekki Penninsula II, Lekki
+
+                        </td>
+                        <td>+234 90777541</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Lagos Island</th>
+                        <td>149, Bamgbose street, Lagos Island, Lagos.</td>
+                        <td>+234 80643244</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Omole</th>
+                        <td>Plot 74b, Ademola Olowokeere Layout, along berger bus stop, Omole, Lagos State.</td>
+                        <td>+234 90666447</td>
+                    </tr>
+                    <tr class="tablelast">
+                        <th scope="row">Iyana Ipaja</th>
+                        <td>Alagbaa round about, beside Okeyson motors Iyana-Ipaja
+                            - Agege motor garage, Iyana Ipaja.</td>
+                        <td>+234 90666447</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <i class="fa fa-home" aria-hidden="true"></i>
+    <i class="fa fa-map-marker" aria-hidden="true"></i>
+    <i class="fa fa-sliders" aria-hidden="true"></i>
+    <i class="fa fa-cogs" aria-hidden="true"></i>
+    <i class="fa fa-address-card" aria-hidden="true"></i>
+    <i class="fa fa-recycle" aria-hidden="true"></i>
+    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+    <i class="bi bi-recycle"></i>
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
