--- a/tables.html
+++ b/tables.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>WasteExpert</title>
+    <title>LocationTable</title>
 </head>
 
 <body>
@@ -372,14 +372,6 @@
             </table>
         </div>
     </div>
-    <i class="fa fa-home" aria-hidden="true"></i>
-    <i class="fa fa-map-marker" aria-hidden="true"></i>
-    <i class="fa fa-sliders" aria-hidden="true"></i>
-    <i class="fa fa-cogs" aria-hidden="true"></i>
-    <i class="fa fa-address-card" aria-hidden="true"></i>
-    <i class="fa fa-recycle" aria-hidden="true"></i>
-    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-    <i class="bi bi-recycle"></i>
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
