just remembered to commit

--- a/forms.html
+++ b/forms.html
@@ -36,7 +36,7 @@
             </div>
             <div class="col-md-12">
                 <label for="validationCustom02" class="form-label">Email address</label>
-                <input type="text" class="form-control" id="validationCustom02" placeholder="Your full name" required />
+                <input type="email" class="form-control" id="validationCustom02" placeholder="Your email address" required />
                 <div class="invalid-feedback">Email is required</div>
             </div>
             <div class="col-md-6 misc">
