--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700&family=Mulish:wght@200;300;400;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet">
@@ -23,13 +26,14 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <span class="logo">
-                <img src="/Images/logo.svg" alt="Logo">
-                <h2>Wastexpert</h2>
-            </span>
+            <div class="logo">
+                <img class="waste" src="/Images/logo.svg" alt="Logo">
+                <span> Wastexpert</span>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <!-- <span><i class="fa-solid fa-bars" onclick="changeicon(this)"></i></span> -->
+                <span><i class="fa-solid fa-bars" id="icon"></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav  mb-2 mb-lg-0">
@@ -59,8 +63,282 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126676.58061440958!2d3.2899349428957976!3d7.167186750372689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103a4bf6995dfc7f%3A0x6734fcf62892478d!2sAbeokuta!5e0!3m2!1sen!2sng!4v1649036799295!5m2!1sen!2sng"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </row>
+    </div>
+    <section class="contactForm">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <h3>Head address</h3>
+                    <div class="info">
+                        <img src="/Images/locationIcon.svg" alt="Location">
+                        <p>Road 3, Soas Estate, Adigbe, along Obada road, Abeokuta, Ogun State.</p>
+                    </div>
+                    <div class="info">
+                        <img src="/Images/phoneIcon.svg" alt="Call">
+                        <p>Phone(+234) 903 961 9448</p>
+                    </div>
+                    <div class="info">
+                        <img src="/Images/emailIcon.svg" alt="Mail">
+                        <p>Info@wastexpert.com
+                            Inquiry@wastexpert.com</p>
+                    </div>
+                    <h3 style="margin-left: 40px;">Office Hours</h3>
+                    <div class="schedule">
 
+                        <p>Monday - Friday
+
+                        </p>
+                        <p>7:45 AM - 5:00PM</p>
+                        <p>Except on public Holiday</p>
+                    </div>
+                </div>
+                <div class="col-md-7">
+                    <div class="SignUpContainer container">
+
+                        <form action="" class="row g-4 needs-validation" novalidate>
+                            <div class="col-md-12">
+                                <h3>Get in touch</h3>
+                            </div>
+                            <div class="col-md-12">
+                                <label for="validationCustom01" class="form-label">Name</label>
+                                <input type="text" class="form-control" id="validationCustom01"
+                                    placeholder="Your full name" required />
+                                <div class="invalid-feedback">Full name is required</div>
+                            </div>
+                            <div class="col-md-12">
+                                <label for="validationCustom02" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="validationCustom02"
+                                    placeholder="Your full name" required />
+                                <div class="invalid-feedback">Email is required</div>
+                            </div>
+                            <div class="col-md-12">
+                                <label for="validationCustom03" class="form-label">Subject</label>
+                                <input type="text" class="form-control" id="validationCustom03" required />
+                                <div class="invalid-feedback">This field is required</div>
+                            </div>
+                            <div class="col-md-12">
+                                <label for="validationCustom04" class="form-label">Message</label>
+                                <!-- <input type="text" id="validationCustom04" required /> -->
+                                <textarea name="message" class="form-control" id="validationCustom04"
+                                    style="width: 100%; height: 260px;" required></textarea>
+                                <div class="invalid-feedback">Leave a message</div>
+                            </div>
+
+
+
+                            <div class="col-md-12"><button type="submit">Send</button></div>
+
+
+
+
+
+
+
+
+
+
+                        </form>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+<footer>
+    <div class="container none">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="/Images/footerLogo.svg" alt="Logo">
+                <p>Wastexpert</p>
+
+            </div>
+            <div class="col-md-6">
+                <label for="subscribe">Subscribe to our Newsletter</label>
+                <div class=" d-flex">
+                    <input type="email" placeholder="Enter your email address here" name="subscription" id="subscribe">
+                    <button><a href="">Sign up</a></button>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="row content">
+            <div class="col-md-4">
+                <p>
+                    Wastexpert is a waste recycling and social benefit venture borne out of sheer passion and vision
+                    to
+                    transform our
+                    environment into a zero landfill and zero waste nation. We operates an incentive-based scheme
+                    which
+                    collects recyclable
+                    materials from post consumers and in turn rewards them with “Points” which they can accumulate
+                    overtime and cash out or
+                    use to redeem/shop for household items offered through our Wastexpert store.
+                </p>
+            </div>
+            <div class="col-md-2">
+                <ul>
+                    <li>About
+
+                    </li>
+                    <br>
+                    <li>
+
+                        Our Mission
+                    </li>
+                    <li>
+
+                        Visions
+                    </li>
+                    <li>
+
+                        Solutions
+                    </li>
+                    <li>
+
+                        Teams
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-3 ">
+                <ul>
+                    <li>Contact Us
+
+                    </li>
+                    <br>
+                    <li>
+
+                        Our Mission
+                    </li>
+                    <li>
+
+                        Visions
+                    </li>
+                    <li>
+
+                        Solutions
+                    </li>
+                    <li>
+
+                        Teams
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-3 ">
+                <ul>
+                    <li>Services
+
+                    </li>
+                    <br>
+                    <li>
+
+                        Waste to wealth pick up
+
+                    </li>
+                    <li>
+
+                        Flip-it
+                    </li>
+                    <li>
+
+                        Waste drop point
+                    </li>
+                    <li>
+
+                        Corporate Recycling
+                    </li>
+                </ul>
+            </div>
+
+
+
+
+
+
+
+        </div>
+
+        <div class="row">
+            <hr>
+        </div>
+        <div class="row copyright">
+            <div class="col-md-9">
+                Copyright © 2020, Created by Wastexpert Team
+            </div>
+            <div class="col-md-3 icons">
+                <div> <a href=""> <img src="/Images/facebook1.svg" alt=""></a></div>
+                <div> <a href=""><img src="/Images/instagram2.svg" alt=""></a></div>
+                <div> <a href=""><img src="/Images/twitter3.svg" alt=""></a></div>
+                <div> <a href=""> <a href=""><img src="/Images/linkedin 4.svg" alt=""></a></div>
+                <div> <a href=""><img src="/Images/linkedin5.svg" alt=""></a></div>
+            </div>
+        </div>
+    </div>
+    <div class="container shownot">
+        <div class="col-md-12">
+            <img src="/Images/footerLogo.svg" alt="Logo">
+            <p>Wastexpert</p>
+
+        </div>
+        <div class="col-md-12">
+            <p>
+                Wastexpert is a waste recycling and social benefit venture borne out of sheer passion and vision
+                to
+                transform our
+                environment into a zero landfill and zero waste nation. We operates an incentive-based scheme
+                which
+                collects recyclable
+                materials from post consumers and in turn rewards them with “Points” which they can accumulate
+                overtime and cash out or
+                use to redeem/shop for household items offered through our Wastexpert store.
+            </p>
+        </div>
+        <div class="col-md-12">
+            <label for="subscribe">Subscribe to our Newsletter</label>
+            <div class=" d-flex ">
+                <input type="email" placeholder="Enter your email address" name="subscription" id="subscribe">
+                <button type="submit"><a href="">Sign up</a></button>
+            </div>
+
+
+
+
+
+
+        </div>
+        <div class="col-md-12">
+            <ul>
+                <li> <a href="">About</li></a>
+                <br>
+                <li><a href="">Contact us</li></a>
+                <br>
+                <li><a href="">Services</li></a>
+                <br>
+                <li><a href="">FAQ</li></a>
+                <br>
+            </ul>
+            <br>
+        </div>
+        <div class="col-md-12 icons">
+            <div> <a href=""> <img src="/Images/facebook1.svg" alt=""></a></div>
+            <div> <a href=""><img src="/Images/instagram2.svg" alt=""></a></div>
+            <div> <a href=""><img src="/Images/twitter3.svg" alt=""></a></div>
+            <div> <a href=""> <a href=""><img src="/Images/linkedin 4.svg" alt=""></a></div>
+            <div> <a href=""><img src="/Images/linkedin5.svg" alt=""></a></div>
+        </div>
+        <div class="container">
+
+            <div class="row ">
+
+                <hr>
+            </div>
+        </div>
+        <div class="col-md-12 ">
+            Copyright © 2020, Created by Wastexpert Team
+        </div>
+    </div>
+</footer>
 
 
 
@@ -81,6 +359,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="/main.js"></script>
 </body>
 
 </html>
