adjusting the contact page

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
     <section class="contactForm">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-lg-5">
                     <h3>Head address</h3>
                     <div class="info">
                         <img src="/Images/locationIcon.svg" alt="Location">
@@ -92,33 +92,33 @@
                         <p>Except on public Holiday</p>
                     </div>
                 </div>
-                <div class="col-md-7">
+                <div class="col-lg-7">
                     <div class="SignUpContainer container">
 
                         <form action="" class="row g-4 needs-validation" novalidate>
                             <div class="col-md-12">
                                 <h3>Get in touch</h3>
                             </div>
-                            <div class="col-md-12">
+                            <div class="col-lg-12">
                                 <label for="validationCustom01" class="form-label">Name</label>
                                 <input type="text" class="form-control" id="validationCustom01"
                                     placeholder="Your full name" required />
                                 <div class="invalid-feedback">Full name is required</div>
                             </div>
-                            <div class="col-md-12">
+                            <div class="col-lg-12">
                                 <label for="validationCustom02" class="form-label">Email address</label>
                                 <input type="email" class="form-control" id="validationCustom02"
-                                    placeholder="Your full name" required />
+                                    placeholder="Your email address" required />
                                 <div class="invalid-feedback">Email is required</div>
                             </div>
-                            <div class="col-md-12">
+                            <div class="col-lg-12">
                                 <label for="validationCustom03" class="form-label">Subject</label>
                                 <input type="text" class="form-control" id="validationCustom03" required />
                                 <div class="invalid-feedback">This field is required</div>
                             </div>
-                            <div class="col-md-12">
+                            <div class="col-lg-12">
                                 <label for="validationCustom04" class="form-label">Message</label>
-                                <!-- <input type="text" id="validationCustom04" required /> -->
+
                                 <textarea name="message" class="form-control" id="validationCustom04"
                                     style="width: 100%; height: 260px;" required></textarea>
                                 <div class="invalid-feedback">Leave a message</div>
@@ -126,7 +126,7 @@
 
 
 
-                            <div class="col-md-12"><button type="submit">Send</button></div>
+                            <div class="col-lg-12"><button type="submit">Send</button></div>
 
 
 
@@ -145,26 +145,144 @@
             </div>
         </div>
     </section>
-<footer>
-    <div class="container none">
-        <div class="row">
-            <div class="col-md-6">
+    <footer>
+        <div class="container none">
+            <div class="row">
+                <div class="col-lg-6">
+                    <img src="/Images/footerLogo.svg" alt="Logo">
+                    <p>Wastexpert</p>
+
+                </div>
+                <div class="col-lg-6">
+                    <label for="subscribe">Subscribe to our Newsletter</label>
+                    <div class=" d-flex">
+                        <input type="email" placeholder="Enter your email address here" name="subscription"
+                            id="subscribe">
+                        <button><a href="">Sign up</a></button>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="row content">
+                <div class="col-lg-4">
+                    <p>
+                        Wastexpert is a waste recycling and social benefit venture borne out of sheer passion and vision
+                        to
+                        transform our
+                        environment into a zero landfill and zero waste nation. We operates an incentive-based scheme
+                        which
+                        collects recyclable
+                        materials from post consumers and in turn rewards them with “Points” which they can accumulate
+                        overtime and cash out or
+                        use to redeem/shop for household items offered through our Wastexpert store.
+                    </p>
+                </div>
+                <div class="col-lg-2">
+                    <ul>
+                        <li>About
+
+                        </li>
+                        <br>
+                        <li>
+
+                            Our Mission
+                        </li>
+                        <li>
+
+                            Visions
+                        </li>
+                        <li>
+
+                            Solutions
+                        </li>
+                        <li>
+
+                            Teams
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 ">
+                    <ul>
+                        <li>Contact Us
+
+                        </li>
+                        <br>
+                        <li>
+
+                            Our Mission
+                        </li>
+                        <li>
+
+                            Visions
+                        </li>
+                        <li>
+
+                            Solutions
+                        </li>
+                        <li>
+
+                            Teams
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 ">
+                    <ul>
+                        <li>Services
+
+                        </li>
+                        <br>
+                        <li>
+
+                            Waste to wealth pick up
+
+                        </li>
+                        <li>
+
+                            Flip-it
+                        </li>
+                        <li>
+
+                            Waste drop point
+                        </li>
+                        <li>
+
+                            Corporate Recycling
+                        </li>
+                    </ul>
+                </div>
+
+
+
+
+
+
+
+            </div>
+
+            <div class="row">
+                <hr>
+            </div>
+            <div class="row copyright">
+                <div class="col-lg-9">
+                    Copyright © 2020, Created by Wastexpert Team
+                </div>
+                <div class="col-lg-3 icons">
+                    <div> <a href=""> <img src="/Images/facebook1.svg" alt=""></a></div>
+                    <div> <a href=""><img src="/Images/instagram2.svg" alt=""></a></div>
+                    <div> <a href=""><img src="/Images/twitter3.svg" alt=""></a></div>
+                    <div> <a href=""> <a href=""><img src="/Images/linkedin 4.svg" alt=""></a></div>
+                    <div> <a href=""><img src="/Images/linkedin5.svg" alt=""></a></div>
+                </div>
+            </div>
+        </div>
+        <div class="container shownot">
+            <div class="col-lg-12">
                 <img src="/Images/footerLogo.svg" alt="Logo">
                 <p>Wastexpert</p>
 
             </div>
-            <div class="col-md-6">
-                <label for="subscribe">Subscribe to our Newsletter</label>
-                <div class=" d-flex">
-                    <input type="email" placeholder="Enter your email address here" name="subscription" id="subscribe">
-                    <button><a href="">Sign up</a></button>
-                </div>
-
-            </div>
-
-        </div>
-        <div class="row content">
-            <div class="col-md-4">
+            <div class="col-lg-12">
                 <p>
                     Wastexpert is a waste recycling and social benefit venture borne out of sheer passion and vision
                     to
@@ -177,168 +295,51 @@
                     use to redeem/shop for household items offered through our Wastexpert store.
                 </p>
             </div>
-            <div class="col-md-2">
+            <div class="col-lg-12">
+                <label for="subscribe">Subscribe to our Newsletter</label>
+                <div class=" d-flex ">
+                    <input type="email" placeholder="Enter your email address" name="subscription" id="subscribe">
+                    <button type="submit"><a href="">Sign up</a></button>
+                </div>
+
+
+
+
+
+
+            </div>
+            <div class="col-lg-12">
                 <ul>
-                    <li>About
-
-                    </li>
+                    <li> <a href="">About</li></a>
                     <br>
-                    <li>
-
-                        Our Mission
-                    </li>
-                    <li>
-
-                        Visions
-                    </li>
-                    <li>
-
-                        Solutions
-                    </li>
-                    <li>
-
-                        Teams
-                    </li>
-                </ul>
-            </div>
-            <div class="col-md-3 ">
-                <ul>
-                    <li>Contact Us
-
-                    </li>
+                    <li><a href="">Contact us</li></a>
                     <br>
-                    <li>
-
-                        Our Mission
-                    </li>
-                    <li>
-
-                        Visions
-                    </li>
-                    <li>
-
-                        Solutions
-                    </li>
-                    <li>
-
-                        Teams
-                    </li>
-                </ul>
-            </div>
-            <div class="col-md-3 ">
-                <ul>
-                    <li>Services
-
-                    </li>
+                    <li><a href="">Services</li></a>
                     <br>
-                    <li>
-
-                        Waste to wealth pick up
-
-                    </li>
-                    <li>
-
-                        Flip-it
-                    </li>
-                    <li>
-
-                        Waste drop point
-                    </li>
-                    <li>
-
-                        Corporate Recycling
-                    </li>
+                    <li><a href="">FAQ</li></a>
+                    <br>
                 </ul>
+                <br>
             </div>
-
-
-
-
-
-
-
-        </div>
-
-        <div class="row">
-            <hr>
-        </div>
-        <div class="row copyright">
-            <div class="col-md-9">
-                Copyright © 2020, Created by Wastexpert Team
-            </div>
-            <div class="col-md-3 icons">
+            <div class="col-md-12 icons">
                 <div> <a href=""> <img src="/Images/facebook1.svg" alt=""></a></div>
                 <div> <a href=""><img src="/Images/instagram2.svg" alt=""></a></div>
                 <div> <a href=""><img src="/Images/twitter3.svg" alt=""></a></div>
                 <div> <a href=""> <a href=""><img src="/Images/linkedin 4.svg" alt=""></a></div>
                 <div> <a href=""><img src="/Images/linkedin5.svg" alt=""></a></div>
             </div>
-        </div>
-    </div>
-    <div class="container shownot">
-        <div class="col-md-12">
-            <img src="/Images/footerLogo.svg" alt="Logo">
-            <p>Wastexpert</p>
+            <div class="container">
 
-        </div>
-        <div class="col-md-12">
-            <p>
-                Wastexpert is a waste recycling and social benefit venture borne out of sheer passion and vision
-                to
-                transform our
-                environment into a zero landfill and zero waste nation. We operates an incentive-based scheme
-                which
-                collects recyclable
-                materials from post consumers and in turn rewards them with “Points” which they can accumulate
-                overtime and cash out or
-                use to redeem/shop for household items offered through our Wastexpert store.
-            </p>
-        </div>
-        <div class="col-md-12">
-            <label for="subscribe">Subscribe to our Newsletter</label>
-            <div class=" d-flex ">
-                <input type="email" placeholder="Enter your email address" name="subscription" id="subscribe">
-                <button type="submit"><a href="">Sign up</a></button>
+                <div class="row ">
+
+                    <hr>
+                </div>
             </div>
-
-
-
-
-
-
-        </div>
-        <div class="col-md-12">
-            <ul>
-                <li> <a href="">About</li></a>
-                <br>
-                <li><a href="">Contact us</li></a>
-                <br>
-                <li><a href="">Services</li></a>
-                <br>
-                <li><a href="">FAQ</li></a>
-                <br>
-            </ul>
-            <br>
-        </div>
-        <div class="col-md-12 icons">
-            <div> <a href=""> <img src="/Images/facebook1.svg" alt=""></a></div>
-            <div> <a href=""><img src="/Images/instagram2.svg" alt=""></a></div>
-            <div> <a href=""><img src="/Images/twitter3.svg" alt=""></a></div>
-            <div> <a href=""> <a href=""><img src="/Images/linkedin 4.svg" alt=""></a></div>
-            <div> <a href=""><img src="/Images/linkedin5.svg" alt=""></a></div>
-        </div>
-        <div class="container">
-
-            <div class="row ">
-
-                <hr>
+            <div class="col-lg-12 ">
+                Copyright © 2020, Created by Wastexpert Team
             </div>
         </div>
-        <div class="col-md-12 ">
-            Copyright © 2020, Created by Wastexpert Team
-        </div>
-    </div>
-</footer>
+    </footer>
 
 
 
