--- a/contactUs.html
+++ b/contactUs.html
@@ -59,31 +59,118 @@
             </div>
         </nav>
     </header>
-    <!---------FLIPIT-------------->
-    <section class="flipIt">
+    <!---------contact us---------->
+    <section class="contactUs">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <h2>Flip it<span><img src="/Asset/img/underline.svg" alt=""></span> </h2>
-                    <p> Make cool Cash by Flipping your old, discarded or Used iron items</p>
-                    <p class="text-align-center justify-content-center d-flex">Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elit. Mollis leo auctor a scelerisque vel sit
-                        cras eu consectetur. Viverra venenatis, mauris diam dolor cras a. Lectus massa aenean neque
-                        pulvinar tortor, a. Nisl, dictumst eu urna, at odio scelerisque pulvinar a, magna. Vulputate.
-                        sit amet, consectetur adipiscing elit. Mollis leo auctor a scelerisque vel sit cras eu
-                        consectetur. Viverra venenatis, mauris diam dolor cras a. Lectus massa aenean neque pulvinar
-                        tortor, a. Nisl, dictumst eu urna, at odio scelerisque pulvinar a, magna. Vulputate. consectetur
-                        adipiscing elit. Mollis leo auctor a scelerisque vel sit cras eu consectetur. Viverra venenatis,
-                        mauris diam dolor cras a. Lectus massa aenean neque pulvinar tortor, a. Nisl, dictumst eu urna,
-                        at odio scelerisque pulvinar a, magna. </p>
-                </div>
-                <div class="col-md-6  pt-5 justify-content-center text-align-center d-flex">
-                    <img src="/Asset/img/cartrash.svg" class="img-fluid" alt="">
+                <div class="col-md-6 pt-5">
+                    <h2>You deserved the
+                        best service</h2>
+                    <p class="pt-5">Our Customer Representatives are always standby to attend to your enquireis asap...
+                        you can also
+                        use our Chat Bot to talk to us for any urgent intervention.</p>
+                    </div>
+                <div class="col-md-6 text-align-center justify-content-center d-flex">
+                    <img src="/Asset/img/womanmic.svg" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
     </section>
-<div> <h3>How it works</h3> </div>
+    <section class="mb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-7 address1">
+                    <h3>Head address</h3>
+                    <p> <span><img src="/Asset/img/location.svg" alt=""></span> Road 3, Soas Estate, Adigbe,
+                        along Obada road, Abeokuta, Ogun State.</p>
+                        <p><span><img src="/Asset/img/phone.svg" alt=""></span>Phone <i>(+234)</i>  903 961
+                            9448</p>
+                    <p><span> <img src="/Asset/img/email.svg" alt=""></span>Info@wastexpert.com
+                        Inquiry@wastexpert.com</p>
+                    <h3>Office Hours</h3>
+                    <p><span><img src="/Asset/img/email.svg" alt=""></span> <i>Monday - Friday</i>
+                        7:45 AM - 5:00PM
+                    </p>
+                    <p><i>Except on public Holiday</i></p>
+                    <h3 class="mb-5">OUR MAP</h3>
+                    <div class="mt-5">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.843014223123!2d3.369519713973434!3d7.144144794841429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103a4bb62acf183d%3A0xd4fe4ebecaa2287f!2sIdi-aba%2C%20Abeokuta!5e0!3m2!1sen!2sng!4v1650377297946!5m2!1sen!2sng"
+                            width="600" height="650" class="img-fluid" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+                <div class="col-md-5 pt-3 contactform">
+                    <p>Get in touch </p>
+                    <!-- <form action="" class="row g-4 needs-validation" novalidate>
+                        <div class="col-md-12">
+                            <h3>Get in touch</h3>
+                        </div>
+                        <div class="col-lg-12">
+                            <label for="validationCustom01" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="validationCustom01"
+                                placeholder="Your full name" required />
+                            <div class="invalid-feedback">Full name is required</div>
+                        </div>
+                        <div class="col-lg-12">
+                            <label for="validationCustom02" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="validationCustom02"
+                                placeholder="Your email address" required />
+                            <div class="invalid-feedback">Email is required</div>
+                        </div>
+                        <div class="col-lg-12">
+                            <label for="validationCustom03" class="form-label">Subject</label>
+                            <input type="text" class="form-control" id="validationCustom03" required />
+                            <div class="invalid-feedback">This field is required</div>
+                        </div>
+                        <div class="col-lg-12">
+                            <label for="validationCustom04" class="form-label">Message</label>
+
+                            <textarea name="message" class="form-control" id="validationCustom04"
+                                style="width: 100%; height: 260px;" required></textarea>
+                            <div class="invalid-feedback">Leave a message</div>
+                            <button type="submit" class="btn btn-primary mt-5 w-100">Send</button>
+
+                        </div> -->
+
+                     <form action="" class="needs-validation" novalidate> 
+                         <form class="row g-4">
+                        <div class="col-md-12">
+                            
+                            <label for="validationCustom01" class="form-label">Name</label>
+                            <input type="text" class="form-control" placeholder="Your full name"
+                                id="validationCustom01" value="" required>
+                                <div class="invalid-feedback">Full name is required</div>    
+                        </div>
+                        <br>
+                        <div class="col-md-12">
+                            <label for="validationCustom02" class="form-label">Email address</label>
+                            <input type="email" class="form-control " placeholder="Your email address here"
+                            id="validationCustom02" value="" required>
+                            <div class="invalid-feedback">email is required</div>
+                        </div>
+                        <br>
+                        <div class="col-md-12">
+                            <label for="validationCustom02" class="form-label">Subject</label>
+                            <input type="email" class="form-control " id="validationCustom02" value="" required>
+                            <div class="invalid-feedback">Subject is required</div>
+                        </div>
+                        <br>
+                        <div class="col-12">
+                            <div class="mb-3">
+                                <label for="validationTextarea" class="form-label">Message</label>
+                                <textarea class="form-control " id="validationTextarea" cols="30" rows="10"
+                                    required></textarea>
+                                <div class="invalid-feedback"> Please enter a message in the textarea.</div>
+                            </div>
+                        </div> 
+                        <br> 
+                        <button type="submit" class="btn mt-3 w-100">Send</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <div class="newsletter">
@@ -165,6 +252,7 @@
                 <img src="/Asset/img/twitter.svg" alt="">
                 <img src="/Asset/img/linkedin.svg" alt="">
                 <img src="/Asset/img/mail.svg" alt="">
+
             </div>
         </div>
     </footer>
