--- a/flipit.html
+++ b/flipit.html
@@ -84,6 +84,21 @@
         </div>
     </section>
 <div> <h3>How it works</h3> </div>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <img src="/Asset/img/flipguy.svg" class="img-fluid" alt="">
+            </div>
+            <div class="col-md-4 mt-5">
+<img src="/Asset/img/fliparrow.svg" class="img-fluid" alt="">
+            </div>
+            <div class="col-md-4">
+<img src="/Asset/img/fliptrack1.svg" class="img-fluid" alt="">
+            </div>
+        </div>
+    </div>
+</section>
 
     <footer>
         <div class="newsletter">
