--- a/flipit.html
+++ b/flipit.html
@@ -83,22 +83,30 @@
             </div>
         </div>
     </section>
-<div> <h3>How it works</h3> </div>
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
+    <div>
+        <h3>How it works</h3>
+    </div>
+    <section class="track">
+        <div class="container">
+            <div class="img-responsive">
                 <img src="/Asset/img/flipguy.svg" class="img-fluid" alt="">
+                <div>
+                    <button> <span><i class="fa fa-play-circle" aria-hidden="true"></i></span> Watch Video</button>
+                </div>
             </div>
-            <div class="col-md-4 mt-5">
-<img src="/Asset/img/fliparrow.svg" class="img-fluid" alt="">
+            <div class="img-responsive arrow">
+                <img src="/Asset/img/fliparrow.svg" class="img-fluid" alt="">
             </div>
-            <div class="col-md-4">
-<img src="/Asset/img/fliptrack1.svg" class="img-fluid" alt="">
+            <div class="img-responsive chart">
+                <img src="/Asset/img/fliptrack1.svg" class="img-fluid" alt="">
+            </div>
+            <div class="img-responsive">
+               <span><img src="/Asset/img/list.svg" width="30px" alt=""></span> <p>Get your item listed</p>  
+              <span><img src="/Asset/img/price.svg"  width="30px" alt=""></span>  <p>Get value for your item</p>
+              <span><img src="/Asset/img/save-money.svg"  width="30px" alt=""></span>  <p>Get paid</p>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <footer>
         <div class="newsletter">
